--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					connections with your users as you engage in genuine
 					discussion.
 				</p>
-				<div class="main-button">Get Started For Free</div>
+				<button class="main-button">Get Started For Free</button>
 				<div class="main-image">
 					<img src="./images/screen-mockups.svg" alt="" />
 				</div>
